--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -48,6 +48,7 @@
 * our UI components are often composed of Objects and Components
 */
 @import 'components/module';
+@import 'base/module';
 
 /*
 * Utilities:
